Dejar una sola referencia al JNDI de la base de datos. Quitar los archivos glassfish-resources.xml. Cambiar el nombre de la referencia al recurso de jdbcProcAud a jdbcSysPandora. Agregar archivo glassfish-web.xml para hacer la referencia al recurso jdbcSysPandora manualmente. Agregar referencia al recurso  glassfish-web.xml en web.xml.

--- a/siereweb/web/modulos/calificacion/panelAccCalificacion.xhtml
+++ b/siereweb/web/modulos/calificacion/panelAccCalificacion.xhtml
@@ -78,7 +78,7 @@ and open the template in the editor.
               <ui:include src="contenidoPopupAgregarBonificacion.xhtml" />
          </ace:dialog>
         <ace:dialog id="dialogSelDescuentoColaboradores"
-                    header="Calificación Admisnitrativa"
+                    header="Calificación Administrativa"
                     widgetVar="dialogSelDescuentoColaboradores"
                     closable="true"
                     modal="false"
