Aplicar cambios acumulados 5  de julio 2017

--- a/siereweb/web/modulos/consulta/pcs/ctn/panelRegistroLlamada.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/ctn/panelRegistroLlamada.xhtml
@@ -3,6 +3,10 @@
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
+
+JAOR - 06/05/2017
+JAOR - CORREGIR LISTA EN COTIZACION SOLO SALEN 20 REGISTROS MAXIMOS
+
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
