--- a/siereweb/web/modulos/parametrizacion/PanelAccParametrizacion.xhtml
+++ b/siereweb/web/modulos/parametrizacion/PanelAccParametrizacion.xhtml
@@ -389,7 +389,7 @@ and open the template in the editor.
                                             </h:selectBooleanCheckbox>
 
                                         </ace:column>
-                                        <ace:column headerText="ID Procuto" style="width: 100px">
+                                        <ace:column headerText="ID Producto" style="width: 100px">
                                             <h:outputText value="#{itemPr.producto.prdId}"
                                                           styleClass="textcolumleft letraOutput"/>
                                         </ace:column>
