--- a/siereweb/web/modulos/consulta/pcs/opd/contenidoOrdenProd.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/opd/contenidoOrdenProd.xhtml
@@ -3,6 +3,9 @@
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
+
+JAOR Abril24 - ajuste tabla de productos asociados a Servicio en creaciòn OP
+
 -->
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
