Proceso agregar columna para contacto copia en la pantalla de cotización. Tomar los requisitos de forma detallada. 1 - En el módulo produccion, En la generación de OP, el resultado de la búsqueda ordenarlo por fecha de mayor a menor - OK. 2 - En el módulo producción, cronograma, mostrar solomanete las OP pendientes, limpiar los que se ven actualemnte - OK.

--- a/siereweb/web/modulos/consulta/pcs/opd/Cronograma.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/opd/Cronograma.xhtml
@@ -79,6 +79,14 @@ and open the template in the editor.
                 </ace:column>
                 
                 <ace:column id="OP" headerText="OP">
+                       <f:facet name="header">
+                        <h:panelGroup>
+                            <h:selectBooleanCheckbox title="Mostrar todas" value="#{pcsOrdenProduccionJSFBean.blnMostrarTodoCron}"
+                                                     valueChangeListener="#{pcsOrdenProduccionJSFBean.hdDtCronogramaMostrarTodo_VCE}">
+                                <f:ajax execute="@this" render="@all"/>
+                            </h:selectBooleanCheckbox>
+                        </h:panelGroup>
+                    </f:facet>
                     <h:outputText  value="#{car.cronogramaSel.numeroOP}"  rendered="#{car.cronogramaSel.numeroOP != null}" />
                     <h:commandButton styleClass="btnirop"
                              rendered="#{car.cronogramaSel.numeroOP == null}"
