Se agrega la opción de seleccionar mas de un contacto y mas de un adjunto en el envío de correo.

--- a/siereweb/web/modulos/consulta/pcs/ctn/panelPcsCtnCliente.xhtml
+++ b/siereweb/web/modulos/consulta/pcs/ctn/panelPcsCtnCliente.xhtml
@@ -478,6 +478,10 @@ and open the template in the editor.
                                                      actionListener="#{pcsCotizacionJSFBean.rowDtDetalleCliente_ActionEvent}">
                                         <f:attribute name="tdcs" value="#{itemDet}"/>
                                     </h:commandButton>
+                                      <h:selectBooleanCheckbox value="#{itemDet.contactoCopia}" title="Contacto copia"
+                                                                           >                                       
+                                         <f:attribute name="tdcs" value="#{itemDet}"/>
+                                    </h:selectBooleanCheckbox>
                                 </ace:column>
                                 <ace:column headerText="Nombres" style="width: 250px">
                                     <h:outputText value="#{itemDet.vntDetallecliente.dclnNombres}"
