--- a/siereweb/web/modulos/liquidacion/panelLiquidacion.xhtml
+++ b/siereweb/web/modulos/liquidacion/panelLiquidacion.xhtml
@@ -125,7 +125,7 @@ and open the template in the editor.
                             <ace:column headerText="Fecha Evento"  styleClass="textcolumleft letraOutput"  sortBy="#{itemLgt.popCxcevento.oprId.oprFechaevtini}">
 
                                 <h:outputText value="#{itemLgt.popCxcevento.oprId.oprFechaevtini}">
-                                    <f:convertDateTime pattern="EE-dd-M-yyyy-W"  timeZone="GMT-5"/>
+                                    <f:convertDateTime pattern="EE-dd-MM-yyyy-W"  timeZone="GMT-5"/>
                                 </h:outputText>
                             </ace:column>
 
