LF - Agregar scripts descuentos, bonificaciones, comisiones y columna de estado del detalle del cliente. LF - Generar el nombre del asunto en el correo electrónico. LF - Permitir la carga de mas de un adjunto a la cotización. LF - Ajustar los losgos de los reportes. LF - Ajustar los logos de la aplicación. LF - Ajustar diagramación de los reportes de venta y factura.

--- a/siereweb/web/modulos/calificacion/contenidoPopupAgregarBonificacion.xhtml
+++ b/siereweb/web/modulos/calificacion/contenidoPopupAgregarBonificacion.xhtml
@@ -62,7 +62,12 @@ and open the template in the editor.
                             <ace:column headerText="Bonificación"   >
                                 <h:outputText value="#{itemCxc.bonificacion.bonificacionNombre}" styleClass="textcolumleft letraOutput"/>
                             </ace:column>
-
+                              <ace:column headerText="Cantidad"   >
+                                  <ace:textEntry value="#{itemCxc.cantidad}" styleClass="textcolumleft letraOutput" readonly="#{!itemCxc.bonificacion.bonificacionMultiplcable}">
+                                      <f:convertNumber integerOnly="true"/>
+                                        <ace:ajax execute="@this" render="@this" />
+                                  </ace:textEntry>
+                            </ace:column>
                             <ace:column headerText="Valor" style="width: 150px">
                                 <h:outputText value="#{itemCxc.bonificacion.bonificacionValor}"
                                               styleClass="textcolumleft letraOutput">
