--- a/siereweb/web/modulos/param/usr/admUsuario.xhtml
+++ b/siereweb/web/modulos/param/usr/admUsuario.xhtml
@@ -12,7 +12,7 @@ and open the template in the editor.
       xmlns:icecore="http://www.icefaces.org/icefaces/core"
       xmlns:ace="http://www.icefaces.org/icefaces/components"
       xmlns:ice="http://www.icesoft.com/icefaces/component">
-    <ui:composition template="/principal/masterpage.xhtml">
+    <ui:composition template="/principal/templateGreen.xhtml">
         <ui:define name="top">
             <ui:include src="panelAccUsuario.xhtml"/>
         </ui:define>
