--- a/siereweb/web/modulos/calificacion/contenidoPopupAgregarDescuento.xhtml
+++ b/siereweb/web/modulos/calificacion/contenidoPopupAgregarDescuento.xhtml
@@ -63,6 +63,12 @@ and open the template in the editor.
                             <ace:column headerText="Descuento">
                                 <h:outputText value="#{itemCxc.descuento.descuentoDesc}" styleClass="textcolumleft letraOutput"/>
                             </ace:column>
+                              <ace:column headerText="Descuento">
+                                  <ace:textEntry value="#{itemCxc.cantidad}" styleClass="textcolumleft letraOutput" readonly="#{!itemCxc.descuento.descuentaMultiplicable}">
+                                      <f:convertNumber integerOnly="true"/>
+                                      <ace:ajax execute="@this" render="@this" />
+                                  </ace:textEntry>
+                            </ace:column>
 
                             <ace:column headerText="Valor" style="width: 150px">
                                 <h:outputText value="#{itemCxc.descuento.descuentoValor}"
