--- a/siereweb/web/modulos/param/crg/admCargo.xhtml
+++ b/siereweb/web/modulos/param/crg/admCargo.xhtml
@@ -13,7 +13,7 @@ and open the template in the editor.
       xmlns:ace="http://www.icefaces.org/icefaces/components"
       xmlns:ice="http://www.icesoft.com/icefaces/component">
     <ui:composition template="/principal/templateGreen.xhtml">
-        <ui:define name="top">
+        <ui:define name="accion">
             <ui:include src="panelAccCargo.xhtml"/>
         </ui:define>
 
