--- a/siereweb/web/modulos/venta/panelVenta.xhtml
+++ b/siereweb/web/modulos/venta/panelVenta.xhtml
@@ -22,8 +22,7 @@ and open the template in the editor.
             <h:outputLabel/>
             <h:outputLabel value="Cliente -->" style="font-weight: 800; font-size: 12px;" />
             <h:outputText styleClass="outputText" 
-                          value="#{gestionVentaJSFBean.tablaVntClienteSel.vntCliente.clnNombres} 
-                          #{gestionVentaJSFBean.tablaVntClienteSel.vntCliente.clnApellidos}"/>
+                          value="#{gestionVentaJSFBean.tablaVntClienteSel.vntCliente.clnNombres}"/>
             <h:outputLabel/>
             <h:outputLabel value="//" style="font-weight: 800; font-size: 12px;"/>
             <h:outputLabel/>
